welcome.lessons.welcome.bat.bool1.In1020.scala.error
in1020:2: error: type mismatch;
 found   : Int(10)
 required: Boolean
	if ((0<a<10) || (0<a<10)){
                 ^