welcome.lessons.welcome.bat.bool1.In1020.scala.code
def in1020(a:Int, b:Int):Boolean = {
	if ((0<a<10) || (0<a<10)){
		return true
	}
	return false
}
